# suavecpp-ros2_ws

./: .gitignore  README.md
launch/: suave_slam.py
setup/: find_ftdi_id.pl  install_deps.bash  libmavsdk-dev_1.4.16_ubuntu20.04_amd64.deb  setup.bash
src/suave_controls/: package.xml  setup.cfg  setup.py
src/suave_controls/suave_controls/: cpu_logger.py  masking_pid_publisher.py
src/suave_launch/: CMakeLists.txt  package.xml
src/suave_launch/src/: suave_main.cpp
src/suave_launch/src/common/: IMavController.h  ISuaveController.h  ITask.h  MavControllerResult.h  SuaveTaskManager.cpp  SuaveTaskManager.h  SystemTask.cpp  SystemTask.h  TaskResult.h
src/suave_launch/src/controllers/: ControllerMacros.h  GazeboSwarmTest.cpp  GazeboSwarmTest.h  SuaveMaskingController.cpp  SuaveMaskingController.h  SuaveMaskingPathPlanner.cpp  SuaveMaskingPathPlanner.h  SuaveTaskManager.cpp  SuaveTaskManager.h  SuaveVIOTestFlight.cpp  SuaveVIOTestFlight.h
src/suave_launch/src/masking_pid/: MaskingSubscriber.cpp  MaskingSubscriber.h
src/suave_launch/src/mavutil/: Drone.cpp  Drone.h  MavUtil.cpp  MavUtil.h  Mavlink.cpp  Mavlink.h  TelemetryProperty.cpp  TelemetryProperty.h
src/suave_launch/src/nav/: IFlightPlan.h  ISystemController.h  SuaveOffboard.cpp  SuaveOffboard.h  SystemControllerResult.h  TakeoffLandFlightPlan.cpp  TakeoffLandFlightPlan.h
src/suave_launch/src/pid/: PID.h  YawPID.h
src/suave_launch/src/ros/: IRosController.h  RosNodeSpinner.cpp  RosNodeSpinner.h  RosSubscriber.cpp  RosSubscriber.h
src/suave_launch/src/util/: Result.h  Timer.h  Util.h
src/suave_launch/src/vio/: CloudExporter.cpp  CloudExporter.h  MavVIOBridge.cpp  MavVIOBridge.h  OdomGeometry.cpp  OdomGeometry.h  VIOBridge.cpp  VIOBridge.h  suave_vio_bridge.cpp
